--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Zscaler + MathsHomework</title>
+<title>MyMathsHomeworkV2</title>
 <style>
 /* ===== Zscaler styles (unchanged from your file) ===== */
 body {background:#e3e3e3;font-family:Arial,sans-serif;font-size:12px;color:#4B4F54;}
@@ -41,8 +41,8 @@ iframe{margin:20px 0;border-radius:12px;box-shadow:0 6px 16px rgba(0,0,0,.3)}
       <tr><td>
         <div class="eu_h">Sorry, you don't have permission to visit this site.</div>
         <div class="eu_co"><b>Website blocked</b></div>
-        <div class="eu_co rsn">Not allowed the use of this Social Network site</div>
-        <div class="eu_co"><a href="#" id="snapLink" class="clickable">Snapchat</a></div>
+        <div class="eu_co rsn">Catagory: Student Blacklist URL</div>
+        <div class="eu_co"><a href="#" id="snapLink" class="clickable">MyMathsHomeworkV2</a></div>
         <div class="fo">Need help? Contact our support team at 0740509750,
           <a href="mailto:servicedesk@cns.catholic.edu.au">servicedesk@cns.catholic.edu.au</a>
         </div>
@@ -103,3 +103,4 @@ document.getElementById("snapLink").addEventListener("click",function(e){
 
 </body>
 </html>
+
