--- a/index.html
+++ b/index.html
@@ -1,325 +1,5 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>MyMathsHomework – Lockable</title>
-<style>
-  :root { --bg:#0b0d12; --card:#0e152d; --fg:#eaf0ff; --accent:#e20000; }
-  body { margin:0; font-family:Arial, sans-serif; background:#e3e3e3; color:#4B4F54; }
-
-  /* PIN overlay */
-  #pinScreen{position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:#000; z-index:30}
-  #pinBox{width:min(92vw,420px); background:#000; color:#eef3ff; padding:30px; border-radius:18px; box-shadow:0 10px 30px rgba(0,0,0,.5); text-align:center}
-  #pinInput{width:220px; padding:10px; font-size:18px; border:none; border-radius:8px; text-align:center; margin-bottom:12px}
-
-  /* Main UI */
-  .btn{appearance:none; border:1px solid #24366d; background:#17224a; color:#eef3ff; padding:12px 14px; border-radius:10px; cursor:pointer; font-weight:600; font-size:14px}
-  .btn:hover{background:#1b2a5c}
-  #mainContent{display:none; max-width:1060px; margin:28px auto; padding:16px}
-  .card{background:#000; color:#eef3ff; border:1px solid #1d2a55; border-radius:18px; padding:22px; box-shadow:0 10px 30px rgba(0,0,0,.25)}
-  .tabbar{display:flex; gap:10px; margin-bottom:16px}
-  .tabbtn{background:#0f1a3a; border:1px solid #22336b}
-  .tabbtn.active{background:#162763}
-  iframe{margin:10px 0; border-radius:12px; box-shadow:0 6px 16px rgba(0,0,0,.3)}
-
-  /* Admin panel */
-  #adminPanel{display:none; margin-top:16px}
-  .panel{background:#0b122a; border:1px solid #22336b; border-radius:16px; padding:16px}
-  .row{display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px}
-  .input, .textarea{background:#0d1733; border:1px solid #263a77; color:#eaf0ff; border-radius:10px; padding:10px; font-size:14px; flex:1; min-width:220px}
-  .textarea{min-height:72px; resize:vertical}
-
-  /* Notification */
-  #notificationBox {
-    position: fixed;
-    top: 28px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    z-index: 100;
-    display: none;
-    max-width: 420px;
-    background: #fffbe5;
-    color: #825300;
-    border: 1px solid #ffd95c;
-    border-radius: 14px;
-    box-shadow: 0 4px 20px rgba(0,0,0,.14);
-    padding: 18px 24px 18px 18px;
-    font-size: 16px;
-    font-weight: 500;
-    align-items: start;
-    gap: 8px;
-    flex-direction: row;
-    animation: notifPop .22s cubic-bezier(.35,1.5,.5,1.02);
-  }
-  @keyframes notifPop {
-    0% { transform: translateY(-30px) scale(.96); opacity: 0; }
-    100% { transform: translateY(0) scale(1); opacity: 1;}
-  }
-  #notificationBox .notif-icon {
-    width: 28px; height: 28px; flex: none; margin-right: 10px; margin-top: 2px;
-  }
-  #notificationBox .notif-close {
-    position: absolute;
-    top: 8px;
-    right: 12px;
-    background: none;
-    border: none;
-    color: #825300;
-    font-size: 22px;
-    font-weight: bold;
-    cursor: pointer;
-    line-height: 1;
-    padding: 0;
-    opacity: 0.7;
-    transition: opacity 0.15s;
-  }
-  #notificationBox .notif-close:hover { opacity: 1; }
-
-  /* Global Lock Overlay (ALL WHITE) */
-  #lockOverlay{
-    position:fixed; inset:0;
-    display:none; align-items:center; justify-content:center;
-    background:#fff !important; color:#222 !important; z-index:50;
-  }
-  #lockCard{
-    width:min(92vw,700px);
-    background:#fff !important; /* all white */
-    border:1px solid #e6e6e6;
-    border-radius:16px;
-    padding:20px;
-    text-align:center;
-    box-shadow:0 18px 40px rgba(0,0,0,.10);
-    color:#222 !important;
-  }
-  #lockImage{display:block; margin:0 auto 12px auto; width:130px; height:auto}
-  #lockTitle{font-size:22px; font-weight:800; margin:8px 0 6px; color:#222 !important;}
-  #lockReason{font-size:14px; color:#444 !important; margin:0 0 12px}
-  #lockMeta{font-size:12px; color:#888; margin-bottom:14px}
-  #lockAdminBtns{display:none; gap:10px; justify-content:center}
-</style>
-</head>
-<body>
-
-<!-- Notification (shows at top center) -->
-<div id="notificationBox">
-  <svg class="notif-icon" viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="12" fill="#FFD95C"/><path d="M12 7v5M12 16h.01" stroke="#825300" stroke-width="2" stroke-linecap="round"/><circle cx="12" cy="12" r="11" stroke="#FFD95C" stroke-width="2"/></svg>
-  <span id="notificationMsg"></span>
-  <button class="notif-close" title="Close notification" onclick="hideNotification()">&times;</button>
-</div>
-
-<!-- PIN Gate -->
-<div id="pinScreen">
-  <div id="pinBox">
-    <h2>Enter PIN</h2>
-    <input id="pinInput" type="password" maxlength="5" placeholder="PIN" />
-    <br />
-    <button class="btn" onclick="checkPin()">Unlock</button>
-    <p id="pinError" style="color:yellow; display:none; margin-top:10px;">Wrong PIN.</p>
-  </div>
-</div>
-
-<!-- Global Lock Overlay -->
-<div id="lockOverlay" role="dialog" aria-modal="true">
-  <div id="lockCard">
-    <!-- Embedded lock icon (your JPEG data URL) -->
-    <img id="lockImage" alt="Locked" src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBxIQEBUQEBAPEA8QEBYQFQ8VFRAQFxIRFRUWFhYRFRMZHyggGBooHRcVIT0hJikrLi8wFyI3ODMsOCgtLisBCgoKDg0OGhAQGi0[...]
-    <div id="lockTitle">Site Locked</div>
-    <div id="lockReason"></div>
-    <div id="lockMeta"></div>
-    <div id="lockAdminBtns">
-      <button class="btn" onclick="adminUnlockSite()">Unlock (admin)</button>
-    </div>
-  </div>
-</div>
-
-<!-- Main Content -->
-<div id="mainContent">
-  <div class="card">
-    <h1>mathshomework 😱</h1>
-    <div class="tabbar">
-      <button id="tabSound" class="btn tabbtn active" onclick="showPage('soundboard')">Soundboard</button>
-      <button id="tabGames" class="btn tabbtn" onclick="showPage('games')">Games</button>
-    </div>
-
-    <div id="soundboardPage">Soundboard content here</div>
-
-    <div id="gamesPage" style="display:none">
-      <!-- your original two -->
-      <iframe src="https://scratch.mit.edu/projects/105500895/embed" width="485" height="402"></iframe>
-      <iframe src="https://scratch.mit.edu/projects/12575620/embed" width="485" height="402"></iframe>
-      <!-- the three you asked to add -->
-      <iframe src="https://scratch.mit.edu/projects/1186261598/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-      <iframe src="https://scratch.mit.edu/projects/17828009/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-      <iframe src="https://scratch.mit.edu/projects/249383463/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
-  </div>
-
-  <!-- Admin panel (only for 14312) -->
-  <div id="adminPanel" class="panel">
-    <h2>Admin Panel</h2>
-    <div class="row">
-      <textarea id="lockReasonInput" class="textarea" placeholder="Reason for lock (shown to everyone)"></textarea>
-    </div>
-    <div class="row">
-      <button class="btn" onclick="adminLockSite()">Lock site (everyone)</button>
-      <button class="btn" onclick="adminUnlockSite()">Unlock site</button>
-    </div>
-    <hr />
-    <!-- Notification sender -->
-    <h3>Send Notification</h3>
-    <div class="row">
-      <textarea id="notifMsgInput" class="textarea" placeholder="Notification message"></textarea>
-    </div>
-    <div class="row">
-      <select id="notifTarget" class="input" style="max-width:180px">
-        <option value="everyone">Everyone</option>
-        <option value="me">Just me</option>
-        <option value="pins">Specific PIN(s)...</option>
-      </select>
-      <input id="notifPins" class="input" type="text" placeholder="PIN(s) (comma separated)" style="display:none;max-width:220px" />
-      <button class="btn" onclick="adminSendNotification()">Send Notification</button>
-    </div>
-  </div>
-</div>
-
 <script>
-/* =========================
-   Config & Keys
-========================= */
-const ADMIN_PIN = "14312";
-const LS_LOCK = "globalLock_v2";
-const LS_PIN  = "lastPin_v2";
-const LS_NOTIF = "lastNotif_v2";
-
-/* =========================
-   Basic UI helpers
-========================= */
-function showPage(which){
-  document.getElementById("soundboardPage").style.display = (which==="soundboard")?"block":"none";
-  document.getElementById("gamesPage").style.display = (which==="games")?"block":"none";
-  document.getElementById("tabSound").classList.toggle("active", which==="soundboard");
-  document.getElementById("tabGames").classList.toggle("active", which==="games");
-}
-function fmtTime(ts){ try{ return new Date(ts).toLocaleString(); }catch(_){ return ""; }}
-
-/* =========================
-   State
-========================= */
-let isAdmin = false;
-let lastPinEntered = localStorage.getItem(LS_PIN) || null;
-
-/* =========================
-   PIN handling
-========================= */
-function checkPin(){
-  const pin = (document.getElementById("pinInput").value || "").trim();
-  if (!pin){ document.getElementById("pinError").style.display="block"; return; }
-  lastPinEntered = pin;
-  try{ localStorage.setItem(LS_PIN, pin); }catch(_){}
-  isAdmin = (pin === ADMIN_PIN);
-
-  document.getElementById("pinScreen").style.display = "none";
-  document.getElementById("mainContent").style.display = "block";
-  document.getElementById("adminPanel").style.display = isAdmin ? "block" : "none";
-
-  // Apply current lock state at login
-  applyLockUI(readLocalLock());
-}
-
-/* =========================
-   Notification System
-========================= */
-function showNotification(msg, id) {
-  if(!msg) return;
-  const box = document.getElementById('notificationBox');
-  document.getElementById('notificationMsg').textContent = msg;
-  box.style.display = "flex";
-  box.setAttribute('data-id', id||"");
-  // Reset timer if any
-  if (window._notifTimeout) clearTimeout(window._notifTimeout);
-  window._notifTimeout = setTimeout(hideNotification, 10000);
-}
-function hideNotification() {
-  const box = document.getElementById('notificationBox');
-  box.style.display = "none";
-  box.setAttribute('data-id',"");
-  if (window._notifTimeout) clearTimeout(window._notifTimeout);
-}
-// Listen for notification "close" on this tab (from storage/cross-tab)
-window.addEventListener("storage", (ev)=>{
-  if (ev.key === LS_NOTIF && ev.newValue) {
-    try {
-      const notif = JSON.parse(ev.newValue);
-      // Only show if this user is targetted
-      if (shouldShowNotification(notif)) {
-        showNotification(notif.msg, notif.id);
-      }
-    } catch(e){}
-  }
-});
-
-/* Should this notification be shown to this user? */
-function shouldShowNotification(notif) {
-  if (!notif || !notif.msg) return false;
-  // "everyone"
-  if (notif.target === "everyone") return true;
-  // "me" (only show if admin and matching PIN)
-  if (notif.target === "me" && isAdmin) return true;
-  // "pins": array of pins. Only show if current PIN matches (even if not admin)
-  if (notif.target === "pins" && Array.isArray(notif.pins) && lastPinEntered)
-    return notif.pins.map(String).includes(String(lastPinEntered));
-  return false;
-}
-
-/* =========================
-   Lock state: local + UI
-========================= */
-function readLocalLock(){
-  try{
-    const raw = localStorage.getItem(LS_LOCK);
-    if (!raw) return {active:false, reason:"", ts:0, by:""};
-    const o = JSON.parse(raw);
-    return {active:!!o.active, reason:o.reason||"", ts:o.ts||0, by:o.by||"admin"};
-  }catch(_){ return {active:false, reason:"", ts:0, by:""}; }
-}
-function writeLocalLock(lock){
-  try{ localStorage.setItem(LS_LOCK, JSON.stringify(lock)); }catch(_){}
-}
-function renderLock(lock){
-  document.getElementById("lockTitle").textContent = "Site Locked";
-  document.getElementById("lockReason").textContent = lock.reason ? lock.reason : "No reason provided.";
-  document.getElementById("lockMeta").textContent = `Locked by ${lock.by||"admin"} — ${fmtTime(lock.ts)}`;
-  document.getElementById("lockAdminBtns").style.display = isAdmin ? "flex" : "none";
-}
-function applyLockUI(lock){
-  if (lock.active){
-    renderLock(lock);
-    document.getElementById("lockOverlay").style.display = "flex";
-  }else{
-    document.getElementById("lockOverlay").style.display = "none";
-  }
-}
-
-/* Admin-only actions */
-function adminLockSite(){
-  if (!isAdmin) return;
-  const reason = (document.getElementById("lockReasonInput").value || "").trim();
-  const lock = { active:true, reason, ts:Date.now(), by:"admin" };
-  writeLocalLock(lock);
-  applyLockUI(lock);
-  cloudSetLock(lock);
-}
-function adminUnlockSite(){
-  if (!isAdmin) return;
-  const lock = { active:false, reason:"", ts:Date.now(), by:"admin" };
-  writeLocalLock(lock);
-  applyLockUI(lock);
-  cloudSetLock(lock);
-}
-
-/* Admin: Send Notification */
+/* ... previous code ... */
 function adminSendNotification() {
   if (!isAdmin) return;
   const msg = (document.getElementById("notifMsgInput").value || "").trim();
@@ -340,130 +20,12 @@ function adminSendNotification() {
     ts: Date.now(),
     by: "admin"
   };
-  // Write to localStorage (triggers all tabs, including this one)
+  // Write to localStorage (triggers all tabs, except this one)
   try { localStorage.setItem(LS_NOTIF, JSON.stringify(notif)); } catch(e){}
   // Try to sync to cloud if ready
   cloudSetNotif(notif);
-  // For admin, also show immediately
-  if (shouldShowNotification(notif)) showNotification(msg, notif.id);
+  // Always show to self if the logic matches (even if it's not just "everyone"/"me"/pins)
+  if (shouldShowNotification(notif)) showNotification(notif.msg, notif.id);
 }
-
-/* Show/hide PINs input for "pins" mode */
-document.addEventListener("DOMContentLoaded", function() {
-  const sel = document.getElementById("notifTarget");
-  if (sel) {
-    sel.addEventListener("change", function() {
-      document.getElementById("notifPins").style.display = (this.value==="pins") ? "inline-block" : "none";
-    });
-  }
-});
-
-/* Load: show PIN and check persisted lock */
-(function init(){
-  document.getElementById("pinScreen").style.display = "flex";
-  // If someone else already locked (from same device, before PIN), reflect it visually:
-  applyLockUI(readLocalLock());
-  // Show last notification if still relevant
-  try {
-    const notif = JSON.parse(localStorage.getItem(LS_NOTIF));
-    if (shouldShowNotification(notif)) showNotification(notif.msg, notif.id);
-  } catch(e){}
-})();
-
-/* Cross-tab (same device) sync */
-window.addEventListener("storage", (ev)=>{
-  if (ev.key !== LS_LOCK || !ev.newValue) return;
-  try{
-    const lock = JSON.parse(ev.newValue);
-    applyLockUI(lock);
-  }catch(_){}
-});
-
-/* =========================
-   Firebase Realtime Database (cross-device)
-========================= */
-/*
-  1) Create a Firebase project (free).
-  2) Enable Realtime Database.
-  3) Paste your web app config into firebaseConfig below.
-  4) (Recommended) Database Rules that allow only your admin to write:
-     {
-       "rules": {
-         ".read": true,
-         "globalLock": {
-           ".write": "auth != null && auth.token.admin === true"
-         },
-         "globalNotif": {
-           ".write": "auth != null && auth.token.admin === true"
-         }
-       }
-     }
-     Or restrict by specific user UID if you use Auth.
-*/
-
-let cloudReady = false;
-let db = null;
-let lockRef = null;
-let notifRef = null;
-
-(function initFirebase(){
-  // TODO: paste your Firebase config here (from your Firebase console)
-const firebaseConfig = {
-  apiKey: "AIzaSyCpBHXlE-l-tLivrJ6nMsZeJwepFcMSeC4",
-  authDomain: "wasda-405c4.firebaseapp.com",
-  databaseURL: "https://wasda-405c4-default-rtdb.firebaseio.com",
-  projectId: "wasda-405c4",
-  storageBucket: "wasda-405c4.firebasestorage.app",
-  messagingSenderId: "449102913942",
-  appId: "1:449102913942:web:81936de160f8672b2f3db7"
-};
-
-  // Only initialize if user filled config
-  if (!firebaseConfig.apiKey || firebaseConfig.apiKey === "YOUR_API_KEY") return;
-
-  const app = window.firebase.initializeApp(firebaseConfig);
-  db = window.firebase.database();
-  lockRef = db.ref("globalLock");
-  notifRef = db.ref("globalNotif");
-
-  // Listen for lock updates from cloud
-  lockRef.on("value", (snap)=>{
-    const v = snap.val();
-    if (!v) return;
-    // Update local store & UI
-    writeLocalLock(v);
-    applyLockUI(v);
-  });
-
-  // Listen for notifications from cloud
-  notifRef.on("value", (snap)=>{
-    const v = snap.val();
-    if (!v) return;
-    try { localStorage.setItem(LS_NOTIF, JSON.stringify(v)); } catch(e){}
-    if (shouldShowNotification(v)) showNotification(v.msg, v.id);
-  });
-
-  cloudReady = true;
-})();
-
-// Set lock in cloud (admins only)
-function cloudSetLock(lock){
-  if (!cloudReady || !lockRef) return;   // silently no-op if not configured
-  // Client-side check (real enforcement should be in DB Rules)
-  if (!isAdmin) return;
-  lockRef.set(lock).catch(()=>{ /* ignore client errors */ });
-}
-
-// Set notification in cloud (admins only)
-function cloudSetNotif(notif){
-  if (!cloudReady || !notifRef) return;
-  if (!isAdmin) return;
-  notifRef.set(notif).catch(()=>{});
-}
+/* ... rest of code ... */
 </script>
-
-<!-- Firebase CDN (compat for simple API) -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-</body>
-</html>
