--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Zscaler + MathsHomework</title>
+<title>MyMathsHomework</title>
 <style>
 /* ===== Zscaler styles (from your provided file) ===== */
 body {background:#e3e3e3;font-family:Arial,sans-serif;font-size:12px;color:#4B4F54;}
