--- a/index.html
+++ b/index.html
@@ -167,8 +167,10 @@ iframe{margin:20px 0;border-radius:12px;box-shadow:0 6px 16px rgba(0,0,0,.3)}
       <button class="btn" onclick="showPage('soundboard')">Soundboard</button>
       <button class="btn" onclick="showPage('games')">Games</button>
     </div>
-    <div id="soundboardPage">Soundboard content here</div>
+    <div id="soundboardPage">Soundboards Coming Soon</div>
     <div id="gamesPage" style="display:none;">
+      <iframe src="https://scratch.mit.edu/projects/3041905/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+      <iframe src="https://scratch.mit.edu/projects/17828009/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
       <iframe src="https://scratch.mit.edu/projects/105500895/embed" width="485" height="402"></iframe>
       <iframe src="https://scratch.mit.edu/projects/12575620/embed" width="485" height="402"></iframe>
     </div>
